chore: use permissive node engine for lib

--- a/lib/package.json
+++ b/lib/package.json
@@ -77,7 +77,7 @@
     "src/"
   ],
   "engines": {
-    "node": "^18 || ^20"
+    "node": ">=18"
   },
   "scripts": {
     "prebuild": "node ./scripts/preBuild.mjs",
