--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
-  "eslint.experimental.useFlatConfig": true,
-
+  "eslint.useFlatConfig": true,
   "eslint.validate": [
     "javascript",
     "javascriptreact",
@@ -13,8 +12,9 @@
     "jsonc",
     "yaml"
   ],
-
-  "typescript.tsdk": "node_modules/typescript/lib",
+  "gitlens.codeLens.authors.enabled": false,
+  "gitlens.codeLens.recentChange.enabled": false,
   "testing.automaticallyOpenPeekView": "never",
+  "typescript.tsdk": "node_modules/typescript/lib",
   "versionlens.npm.onSaveChanges": "versionlens pnpm install"
 }
