--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "eslint": "^9.12.0",
     "typescript": "^5.6.3",
     "vue": "^3.5.12"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "vike": "patches/vike.patch"
+    }
   }
 }
