--- a/lib/package.json
+++ b/lib/package.json
@@ -37,12 +37,12 @@
   "exports": {
     ".": {
       "types": "./dist/types/index.d.ts",
-      "module": "./dist/mjs/index.mjs",
-      "import": "./dist/mjs/index.mjs",
-      "require": "./dist/cjs/index.cjs",
       "script": "./dist/SmartVui.js",
       "browser": "./dist/SmartVui.js",
-      "style": "./dist/SmartVui.css"
+      "style": "./dist/SmartVui.css",
+      "module": "./dist/mjs/index.mjs",
+      "import": "./dist/mjs/index.mjs",
+      "require": "./dist/cjs/index.cjs"
     },
     "./components/*.sass": {
       "import": "./src/components/*/index.sass",
@@ -50,11 +50,11 @@
     },
     "./components/*": {
       "types": "./dist/types/components/*/index.d.ts",
+      "style": "./dist/styles/components/*.css",
+      "sass": "./src/components/*/index.sass",
       "module": "./dist/mjs/components/*/index.mjs",
       "import": "./dist/mjs/components/*/index.mjs",
-      "require": "./dist/cjs/components/*/index.cjs",
-      "style": "./dist/styles/components/*.css",
-      "sass": "./src/components/*/index.sass"
+      "require": "./dist/cjs/components/*/index.cjs"
     },
     "./composables/*": {
       "types": "./dist/types/composables/*/index.d.ts",
@@ -99,29 +99,29 @@
   },
   "devDependencies": {
     "@material/material-color-utilities": "^0.3.0",
-    "@microsoft/api-extractor": "^7.47.11",
-    "@types/node": "^22.8.1",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "@vitest/coverage-v8": "^2.1.3",
-    "@vitest/ui": "^2.1.3",
-    "@vue/server-renderer": "^3.5.12",
-    "@vue/shared": "^3.5.12",
+    "@microsoft/api-extractor": "^7.48.1",
+    "@types/node": "^22.10.2",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
+    "@vue/server-renderer": "^3.5.13",
+    "@vue/shared": "^3.5.13",
     "@vue/test-utils": "^2.4.6",
     "@vueuse/gesture": "^2.0.0",
     "autoprefixer": "^10.4.20",
-    "bumpp": "^9.7.1",
-    "happy-dom": "^15.7.4",
-    "lightningcss": "^1.27.0",
-    "postcss": "^8.4.47",
-    "postcss-rtlcss": "^5.5.0",
-    "sass-embedded": "^1.80.4",
-    "typescript": "^5.6.3",
-    "vite": "^5.4.10",
+    "bumpp": "^9.9.1",
+    "happy-dom": "^15.11.7",
+    "lightningcss": "^1.28.2",
+    "postcss": "^8.4.49",
+    "postcss-rtlcss": "^5.6.0",
+    "sass-embedded": "^1.83.0",
+    "typescript": "~5.6.3",
+    "vite": "^6.0.3",
     "vite-plugin-dts": "^4.3.0",
-    "vitest": "^2.1.3",
-    "vue": "^3.5.12",
-    "vue-component-meta": "^2.1.8",
-    "vue-component-type-helpers": "^2.1.8",
-    "vue-tsc": "^2.1.8"
+    "vitest": "^2.1.8",
+    "vue": "^3.5.13",
+    "vue-component-meta": "^2.1.10",
+    "vue-component-type-helpers": "^2.1.10",
+    "vue-tsc": "^2.1.10"
   }
 }
