--- a/lib/package.json
+++ b/lib/package.json
@@ -99,29 +99,29 @@
   },
   "devDependencies": {
     "@material/material-color-utilities": "^0.3.0",
-    "@microsoft/api-extractor": "^7.48.1",
-    "@types/node": "^22.10.2",
+    "@microsoft/api-extractor": "^7.49.1",
+    "@types/node": "^22.10.7",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vitest/coverage-v8": "^2.1.8",
-    "@vitest/ui": "^2.1.8",
+    "@vitest/coverage-v8": "^3.0.1",
+    "@vitest/ui": "^3.0.1",
     "@vue/server-renderer": "^3.5.13",
     "@vue/shared": "^3.5.13",
     "@vue/test-utils": "^2.4.6",
     "@vueuse/gesture": "^2.0.0",
     "autoprefixer": "^10.4.20",
-    "bumpp": "^9.9.1",
-    "happy-dom": "^15.11.7",
-    "lightningcss": "^1.28.2",
-    "postcss": "^8.4.49",
+    "bumpp": "^9.10.1",
+    "happy-dom": "^16.6.0",
+    "lightningcss": "^1.29.1",
+    "postcss": "^8.5.1",
     "postcss-rtlcss": "^5.6.0",
-    "sass-embedded": "^1.83.0",
-    "typescript": "~5.6.3",
-    "vite": "^6.0.5",
-    "vite-plugin-dts": "^4.4.0",
-    "vitest": "^2.1.8",
+    "sass-embedded": "^1.83.4",
+    "typescript": "^5.7.3",
+    "vite": "^6.0.7",
+    "vite-plugin-dts": "^4.5.0",
+    "vitest": "^3.0.1",
     "vue": "^3.5.13",
-    "vue-component-meta": "^2.1.10",
-    "vue-component-type-helpers": "^2.1.10",
-    "vue-tsc": "^2.1.10"
+    "vue-component-meta": "^2.2.0",
+    "vue-component-type-helpers": "^2.2.0",
+    "vue-tsc": "^2.2.0"
   }
 }
