--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "type": "module",
-  "packageManager": "pnpm@9.15.1",
+  "packageManager": "pnpm@9.15.4",
   "imports": {
     "$lib/*": "./lib/src/*",
     "$dev/*": "./dev/src/*"
@@ -9,9 +9,9 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.12.0",
-    "eslint": "^9.17.0",
-    "typescript": "~5.6.3",
+    "@antfu/eslint-config": "^3.14.0",
+    "eslint": "^9.18.0",
+    "typescript": "^5.7.3",
     "vue": "^3.5.13"
   },
   "pnpm": {
