--- a/lib/package.json
+++ b/lib/package.json
@@ -99,18 +99,19 @@
   },
   "devDependencies": {
     "@material/material-color-utilities": "^0.3.0",
-    "@microsoft/api-extractor": "^7.49.1",
-    "@types/node": "^22.10.9",
+    "@microsoft/api-extractor": "^7.49.2",
+    "@testing-library/dom": "^10.4.0",
+    "@types/node": "^22.13.1",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vitest/coverage-v8": "^3.0.3",
-    "@vitest/ui": "^3.0.3",
+    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/ui": "^3.0.5",
     "@vue/server-renderer": "^3.5.13",
     "@vue/shared": "^3.5.13",
     "@vue/test-utils": "^2.4.6",
     "@vueuse/gesture": "^2.0.0",
     "autoprefixer": "^10.4.20",
-    "bumpp": "^9.10.2",
-    "happy-dom": "^16.7.2",
+    "bumpp": "^10.0.1",
+    "happy-dom": "^16.8.1",
     "lightningcss": "^1.29.1",
     "postcss": "^8.5.1",
     "postcss-rtlcss": "^5.6.0",
@@ -118,7 +119,7 @@
     "typescript": "^5.7.3",
     "vite": "^6.0.11",
     "vite-plugin-dts": "^4.5.0",
-    "vitest": "^3.0.3",
+    "vitest": "^3.0.5",
     "vue": "^3.5.13",
     "vue-component-meta": "^2.2.0",
     "vue-component-type-helpers": "^2.2.0",
