--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "type": "module",
-  "packageManager": "pnpm@10.3.0",
+  "packageManager": "pnpm@10.4.0",
   "imports": {
     "$lib/*": "./lib/src/*",
     "$dev/*": "./dev/src/*"
@@ -9,14 +9,18 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.2.0",
-    "eslint": "^9.20.0",
+    "@antfu/eslint-config": "^4.2.1",
+    "eslint": "^9.20.1",
     "typescript": "^5.7.3",
     "vue": "^3.5.13"
   },
   "pnpm": {
     "patchedDependencies": {
       "vike": "patches/vike.patch"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "vue-demi"
+    ]
   }
 }
